cross-section -> cross section
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5275 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -42,11 +42,11 @@ The quantum theory describes particle collisions as a transition from an initial
 }}{el hel amp}
 where for brevity we have omitted the $s$, $t$ and $\ph$ parameters in the brackets on the \rhs
 
-Most often the experiments are performed with unpolarized beams and the spin characteristics of the scattered protons are not measured. Such experiments can only measure the unpolarized differential cross-section (see e.g.~Sec.~D in \bref{buttimore78})
+Most often the experiments are performed with unpolarized beams and the spin characteristics of the scattered protons are not measured. Such experiments can only measure the unpolarized differential cross section (see e.g.~Sec.~D in \bref{buttimore78})
 \eqref{{\d\si\over\d t} = {\pi\over 2sp^2} \left( |\phi_1|^2 + |\phi_2|^2 + |\phi_3|^2 + |\phi_4|^2 + 4 |\phi_5|^2 \right)\ .}{el hel dsdt}
-Note that if the beams are unpolarized, there is no preferred direction in the transverse plane of the \abb{CM} frame (plane $xy$ in \Fg{el scat scheme}) and consequently all azimuthal angles $\ph$ are equivalent. This means that, for unpolarized scattering, the $\ph$ distribution must be uniform. That is why we have not mentioned the $\ph$ dependence in \Eq{el hel dsdt}. We have neither indicated the cross-section dependence on $s$ -- this will be tacitly assumed in what follows.
+Note that if the beams are unpolarized, there is no preferred direction in the transverse plane of the \abb{CM} frame (plane $xy$ in \Fg{el scat scheme}) and consequently all azimuthal angles $\ph$ are equivalent. This means that, for unpolarized scattering, the $\ph$ distribution must be uniform. That is why we have not mentioned the $\ph$ dependence in \Eq{el hel dsdt}. We have neither indicated the cross section dependence on $s$ -- this will be tacitly assumed in what follows.
 
-The optical theorem (see e.g.~Sec.~7.3 in \bref{peskin} or Sec.~5.1.3 in \bref{formanek QFT}) relates the total cross-section $\si_{\rm tot}$ to the forward ($t=0\un{GeV^2}$) amplitudes that preserve the spin states. From \Eq{el hel amp} we see that those are the amplitudes $\phi_1$ and $\phi_3$. Using the normalization from \bref{buttimore78} one can write:
+The optical theorem (see e.g.~Sec.~7.3 in \bref{peskin} or Sec.~5.1.3 in \bref{formanek QFT}) relates the total cross section $\si_{\rm tot}$ to the forward ($t=0\un{GeV^2}$) amplitudes that preserve the spin states. From \Eq{el hel amp} we see that those are the amplitudes $\phi_1$ and $\phi_3$. Using the normalization from \bref{buttimore78} one can write:
 \eqref{\si_{\rm tot} = {2\pi\over p\sqrt s}\, \Im (\phi_1 + \phi_3)|_{t=0}\ .}{el hel si tot}
 
 Out of the five amplitudes introduced in \Eq{el hel amp}, each is of different importance. For example in Sec.~3.3 in \bref{donnachie02} the authors describe the elastic scattering by a pomeron exchange. Their pomeron couples to quarks as the photon does, thus the helicity of the quarks is not altered. This does not yet mean that the proton helicity shall be conserved -- the quarks within the proton have intrinsic transverse momenta. But still, one may expect the helicity-changing amplitudes ($\phi_2$, $\phi_4$ and $\phi_5$) to be relatively small. Furthermore, the authors argue that the leading Regge exchanges (pomeron, $\rm\rh$, $\rm\om$, $f_2$, $a_2$) can only contribute to the combinations $\phi_1+\phi_3$, $\phi_2 - \phi_4$ and $\phi_5$. Thus these amplitude combinations should be dominant at high energies. In addition, the authors express their expectation that $\phi_1 \approx \phi_3$ and $\phi_2 \approx - \phi_4$.
@@ -56,7 +56,7 @@ Even stronger expectations are summarized in Sec.~3.1 in \bref{kroll78}. For the
 	{\d\si\over\d t} \approx {\pi\over s p^2}\, |F|^2\ ,\qquad
 	\si_{\rm tot} \approx {4\pi\over p \sqrt{s}}\, \Im F|_{t = 0}\ .
 }{el spinless si}
-Note that these relations for the differential and total cross-sections are exact for elastic scattering of spin-less particles. Therefore this approximation gives the same result as neglecting proton spins from the very beginning.
+Note that these relations for the differential and total cross sections are exact for elastic scattering of spin-less particles. Therefore this approximation gives the same result as neglecting proton spins from the very beginning.
 
 Within this approximation, the amplitude $F$ (if analytically continued) describes $\rm pp$ as well as $\rm \bar pp$ scattering. It is a consequence of the crossing symmetry (see e.g.~Sec.~4.5 in \bref{barone}) which states that the matrix element does not change if an outgoing particle with four-momentum $P$ is replaced by an incoming antiparticle with four-momentum $-P$. This statement can be derived in quantum field theory, see e.g.~the end of Sec.~7.2 in \bref{peskin}. Then, the $\rm \bar pp$ scattering amplitude $F'(s, t)$ for the scattering from \Fg{el scat scheme}, where particles $2$ and $2'$ are anti-protons, can be related to the $\rm pp$ scattering amplitude $F(s, t)$ as follows:
 \eqref{F'(s, t) = F(4m^2 - s - t, t)\ .}{el app amp}
@@ -132,7 +132,7 @@ The basic idea of the form-factor construction is that the quarks have a certain
 
 Regarding the elementary quark-quark amplitude $F_{\rm qq}(t)$, the model includes two variants. In the first one (we will refer to it as \abb{HP} variant), the quarks interact via the hard pomeron (reggeized gluon ladders, as described by next-to-leading order \abb{BFKL}), for details see \bref{islam05}. In the model of Islam et al., the hard pomeron is approximated by a single pole (with position determined by $r_0$). The intercept of the pomeron is given by the parameter $\om$: $\al_{\rm BFKL} = 1 + \om$. The hard-pomeron amplitude reads:
 \eqref{F_{\rm HP}(t) = {\i\, \tilde\ga_{\rm qq}\, s\, \left(s \e^{-\i {\pi\over 2}} \right)^\om \over {1\over r_0^2} - t} \ .}{el is F HP}
-The authors have shown (see e.g.~\bref{islam06}) that the corresponding large-$|t|$ cross-section falls as $|t|^{-10}$, which agrees with the \abb{QCD} quark counting rules.
+The authors have shown (see e.g.~\bref{islam06}) that the corresponding large-$|t|$ cross section falls as $|t|^{-10}$, which agrees with the \abb{QCD} quark counting rules.
 
 In the \abb{LxG} variant (see e.g.~\bref{islam09}), the interaction is mediated by the low-$x$ gluons that surround the valence quarks:
 \eqref{F_{\rm LxG}(t) = {\i\, \tilde\ga_{\rm gg}\, s\, \left(s \e^{-\i {\pi\over 2}} \right)^\la \over \left(1 - {t\over m_c^2} \right)^{5\over 2}}\ .}{el is F HP}
@@ -215,7 +215,7 @@ reflecting (in the same order) gluon-gluon, quark-gluon, quark-quark interaction
 \eqref{W(b, \mu) = {\mu^2\over 96\pi}\, (\mu b)^3\, K_3(\mu b)\ ,}{el bh W}
 which corresponds to a Fourier-Bessel transform of a dipole form factor.
 
-The $\si(s)$ functions in \Eq{el bh ch} can be interpreted (in Born approximation) as the integral cross-sections of the four sub-processes. The gluon-gluon cross-section is modelled after QCD (as an $s$-channel exchange of a particle with mass $m_0$ between two gluons carrying fractions $x_1$ and $x_2$ of their parent protons' momenta):
+The $\si(s)$ functions in \Eq{el bh ch} can be interpreted (in Born approximation) as the integral cross sections of the four sub-processes. The gluon-gluon cross section is modelled after QCD (as an $s$-channel exchange of a particle with mass $m_0$ between two gluons carrying fractions $x_1$ and $x_2$ of their parent protons' momenta):
 \eqref{
 	\si_{\rm gg}(s) = C_{\rm gg}\, \Si_{\rm gg} \int\!\!\int \Th(s\, x_1 x_2 - m_0^2)\, f_{\rm g}(x_1)\, f_{\rm g}(x_2)\,\d x_1\, \d x_2\ ,\qquad
 	\Si_{\rm gg} = {9\pi \al_{\rm s}\over m_0^2}\ .
@@ -224,11 +224,11 @@ Here, $\al_s$ stands for the strong coupling constant (fixed at the value of $0.
 \eqref{f_{\rm g}(x) = N_{\rm g} {(1-x)^5\over x^{1+\ep}}\ ,\qquad N_{\rm g} = {1\over 2\cdot 5!}\, (6 - \ep) \cdots (1 - \ep)\ .}{al bh fg} 
 With this parameterization, the integrals in \Eq{el bh si gg} can be calculated analytically, yield a long expression that can be found in Eq.~(B5) in \bref{bh99}.
 
-The quark-quark cross-section is assumed to receive two contributions -- one constant and one falling with energy:
+The quark-quark cross section is assumed to receive two contributions -- one constant and one falling with energy:
 \eqref{\si_{\rm qq}(s) = \Si_{\rm gg} \left(C + C^{\rm even}_{\rm Regge}\, {m_0\over \sqrt s}\, \e^{\i{\pi\over 4}} \right)\ .}{el bh si qq}
 The quark-gluon interaction is modelled by a logarithmic energy dependence:
 \eqref{\si_{\rm qg}(s) = \Si_{\rm gg}\, C^{\rm log}_{\rm qg} \left( \log {s\over s_0} - \i {\pi\over 2} \right)\ .}{el bh si qg}
-The parameterization of the odderon-exchange cross-section reads:
+The parameterization of the odderon-exchange cross section reads:
 \eqref{\si_{\rm odd}(s) = -\i\, C_{\rm odd}\, \Si_{\rm gg}\, {m_0\over \sqrt s}\,  \e^{\i{\pi\over 4}}\ .}{el bh si odd}
 Due to the $\sqrt s$ factor in the denominator, this contribution is irrelevant at high energies.
 
@@ -246,13 +246,13 @@ We have implemented the aforementioned models in a computer program (see the des
 
 We recall that all results presented in this section are due to the strong interaction only. The influence of the electromagnetic force will be discussed in \Sc{el coulomb}.
 
-The first quantity to look at is the differential cross-section. It is shown in \Fg{el mod dsdt narrow,el mod dsdt large} (narrower and larger $|t|$ range). All the predictions are very similar up to the first dip/shoulder which occurs between $|t| = 0.4$ and $0.6\un{GeV^2}$. Up to this point, the cross-section falls off almost exponentially. The first dip is very shallow in the prediction by Islam et al., for $7\un{TeV}$ it is merely a shoulder. For this model this is the only structure on the cross-section curve (for both \abb{HP} and \abb{LxG} variants). On contrary, the other models predict secondary dips/shoulders. Their size and position is often quite different for the two energies shown, especially for higher $|t|$ values. The value of the differential cross-section at the first dip differs up to a factor $10$ between the models. More precisely, the models split into two groups with a similar value of the cross-section in the first dip -- Islam et al. (both variants) and Petrov et al. with 2 pomerons (lower cross-section) and Bourrely et al., Petrov et al. (3P) and Block et al. (higher value). For a comparison to the first \abb{LHC} data see \Fg{ttm mod cmp dsdt} (in the conclusion chapter).
+The first quantity to look at is the differential cross section. It is shown in \Fg{el mod dsdt narrow,el mod dsdt large} (narrower and larger $|t|$ range). All the predictions are very similar up to the first dip/shoulder which occurs between $|t| = 0.4$ and $0.6\un{GeV^2}$. Up to this point, the cross section falls off almost exponentially. The first dip is very shallow in the prediction by Islam et al., for $7\un{TeV}$ it is merely a shoulder. For this model this is the only structure on the cross section curve (for both \abb{HP} and \abb{LxG} variants). On contrary, the other models predict secondary dips/shoulders. Their size and position is often quite different for the two energies shown, especially for higher $|t|$ values. The value of the differential cross section at the first dip differs up to a factor $10$ between the models. More precisely, the models split into two groups with a similar value of the cross section in the first dip -- Islam et al. (both variants) and Petrov et al. with 2 pomerons (lower cross section) and Bourrely et al., Petrov et al. (3P) and Block et al. (higher value). For a comparison to the first \abb{LHC} data see \Fg{ttm mod cmp dsdt} (in the conclusion chapter).
 
-\fig{fig/pdf/el_mod_dsdt_narrow.pdf}{el mod dsdt narrow}{Differential cross-section as predicted by the four models, in the $|t|$ range from $0$ to $5\un{GeV^2}$.}
+\fig{fig/pdf/el_mod_dsdt_narrow.pdf}{el mod dsdt narrow}{Differential cross section as predicted by the four models, in the $|t|$ range from $0$ to $5\un{GeV^2}$.}
 
-\fig{fig/pdf/el_mod_dsdt_large.pdf}{el mod dsdt large}{Differential cross-section as predicted by the four models, in the $|t|$ range from $0$ to $20\un{GeV^2}$.}
+\fig{fig/pdf/el_mod_dsdt_large.pdf}{el mod dsdt large}{Differential cross section as predicted by the four models, in the $|t|$ range from $0$ to $20\un{GeV^2}$.}
 
-We have already said that all models predict an almost exponential decrease of the cross-section for the lowest $|t|$ values. To evaluate this statement more precisely, it is useful to plot the exponential slope
+We have already said that all models predict an almost exponential decrease of the cross section for the lowest $|t|$ values. To evaluate this statement more precisely, it is useful to plot the exponential slope
 \eqref{B(t) = {\d\over \d t} \log {\d\si\over\d t}(t) = {\d\over \d t} \log |F(t)|^2\ .}{el B}
 Considering the total variation of the slope $B(t)$ roughly from $-10$ to $30\un{GeV^{-2}}$, the slope for $|t|$ values below the first dip could be thought of constant. But still, there are non-negligible variations. The highest slope is reached by the model of Islam et al. at $t=0\un{GeV^2}$ ($28$ and $31\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively). For the other models, the slope has approximately a parabolic shape reaching the maximum just before the first dip and having the minimum on a half way. For both energies the lowest values are reached by the model of Bourrely et al. ($17.6$ and $18.9\un{GeV^{-2}}$), the highest by Block et al. ($24.7$ and $28.5\un{GeV^{-2}}$ for $7$ and $14\un{TeV}$ respectively). For a comparison to the first \abb{LHC} data see \Fg{ttm mod cmp B} (in the conclusion chapter).
 
@@ -286,7 +286,7 @@ We will first review some of the most influential results (present them much as 
 
 \subsection[em sc qed]{Electromagnetic scattering in QED and form factors}
 
-\abb{QED} is a \abb{QFT} model of the electromagnetic interaction. Moreover, it can naturally account for the structure of the proton and its anomalous magnetic moment (see e.g.~Sec.~6.2 in \bref{peskin} or Sec.~5.2 in \bref{chyla}). These are described by two form factors, the electric $G_{\rm E}(t)$ and the magnetic $G_{\rm M}(t)$, which are related to the distributions of charge and magnetization in the proton (see e.g.~Sachs \bref{sachs62}). The leading contribution to the cross-section (one photon exchange, $\O{\al^2}$) was calculated in \bref{block06} (Eq.~(31)). Since we are interested in the \abb{LHC} energies (few $\rm TeV$) and momentum transfers smaller than $|t| = 10\un{GeV^2}$, we may use the high-energy and low-momentum-transfer limits \Eq{el high energy,el low angle}. Then, the result reads (both for $\rm pp$ and $\rm \bar p p$ scattering)
+\abb{QED} is a \abb{QFT} model of the electromagnetic interaction. Moreover, it can naturally account for the structure of the proton and its anomalous magnetic moment (see e.g.~Sec.~6.2 in \bref{peskin} or Sec.~5.2 in \bref{chyla}). These are described by two form factors, the electric $G_{\rm E}(t)$ and the magnetic $G_{\rm M}(t)$, which are related to the distributions of charge and magnetization in the proton (see e.g.~Sachs \bref{sachs62}). The leading contribution to the cross section (one photon exchange, $\O{\al^2}$) was calculated in \bref{block06} (Eq.~(31)). Since we are interested in the \abb{LHC} energies (few $\rm TeV$) and momentum transfers smaller than $|t| = 10\un{GeV^2}$, we may use the high-energy and low-momentum-transfer limits \Eq{el high energy,el low angle}. Then, the result reads (both for $\rm pp$ and $\rm \bar p p$ scattering)
 \eqref{{\d\si^{\rm EM}_{\rm QED, OPE}\over\d t} = {4\pi \al^2\over t^2} G_{\rm eff}^4(t)\ .}{el dsdt em}
 The symbol $G_{\rm eff}(t)$ represents an ``effective'' form factor that is a combination of the electric and magnetic form factors:
 \eqref{G^2_{\rm eff}(t) = {G_{\rm E}(t)^2 + \ta G_{\rm M}(t)^2 \over 1 + \ta},\qquad \ta = - {t\over 4m^2}\ .}{el ff eff}
@@ -372,7 +372,7 @@ The decomposition \Eq{el F CH decomp C} has become as traditional as calling the
 }
 \eqref{\Ph_{\rm Bethe}(t) = \pm 2 \log {1.06\over a\sqrt{|t|}}\ .}{el phase bethe}
 
-We recall that the hadronic amplitude $F^{\rm H}(t)$ reflects Bethe's hadronic model and thus one cannot use his interference formula for a generic hadronic model. This fact may seem as a major disadvantage nowadays. We are mentioning Bethe's work because most of his successors have derived formulae formally very similar to \Eq{el F CH decomp C}. The common feature is that the total amplitude $F^{\rm C+H}(t)$ hides an infinite phase factor which is not observable in the differential cross-section.
+We recall that the hadronic amplitude $F^{\rm H}(t)$ reflects Bethe's hadronic model and thus one cannot use his interference formula for a generic hadronic model. This fact may seem as a major disadvantage nowadays. We are mentioning Bethe's work because most of his successors have derived formulae formally very similar to \Eq{el F CH decomp C}. The common feature is that the total amplitude $F^{\rm C+H}(t)$ hides an infinite phase factor which is not observable in the differential cross section.
 
 
 \subsection[int qft]{Interference in perturbative QFT (Feynman diagrams)}
@@ -495,15 +495,15 @@ In this part we will review the results summarized above and discuss their valid
 
 %%%%% critique of F^C calculations %%%%%
 
-The first quantity to review is the Coulomb amplitude. We have pursued two approaches to derive it -- the \abb{QED} and the eikonal model. While we consider \abb{QED} the best available framework to describe electromagnetic interactions, we have presented the leading order (\abb{OPE}) to the scattering amplitude only, see \Eq{el dsdt em}. A natural question could be raised: is the leading order good enough? An answer can be found in the already quoted works on form factors \bref{arrington07,puckett10}. The authors used two methods for extracting the form factors. One is based on comparing the measured differential cross-section $\d\si/\d t$ with the one expected for point like particles (Mott formula, calculated also in \abb{OPE} order, see e.g.~\bref{chyla}). In the other method a longitudinally polarized electron beam is used and the polarization of the recoil proton is measured (more details e.g.~in \bref{gayou02}). Then, these two methods are found to disagree for $|t| \gs 1\un{GeV^2}$ (see e.g.~Fig.~2 in \bref{arrington07}). The authors argue (see also \bref{guichon03}) that most of the discrepancy disappears if two-photon-exchange (\abb{TPE}) contributions are included. Moreover these corrections alter mostly the results of the cross-section method (which is very similar to our form-factor application). This leads us to the conclusion that the \abb{OPE} cross-section presented in \Eq{el dsdt em} is only accurate for $|t| \ls 1\un{GeV^2}$.
+The first quantity to review is the Coulomb amplitude. We have pursued two approaches to derive it -- the \abb{QED} and the eikonal model. While we consider \abb{QED} the best available framework to describe electromagnetic interactions, we have presented the leading order (\abb{OPE}) to the scattering amplitude only, see \Eq{el dsdt em}. A natural question could be raised: is the leading order good enough? An answer can be found in the already quoted works on form factors \bref{arrington07,puckett10}. The authors used two methods for extracting the form factors. One is based on comparing the measured differential cross section $\d\si/\d t$ with the one expected for point like particles (Mott formula, calculated also in \abb{OPE} order, see e.g.~\bref{chyla}). In the other method a longitudinally polarized electron beam is used and the polarization of the recoil proton is measured (more details e.g.~in \bref{gayou02}). Then, these two methods are found to disagree for $|t| \gs 1\un{GeV^2}$ (see e.g.~Fig.~2 in \bref{arrington07}). The authors argue (see also \bref{guichon03}) that most of the discrepancy disappears if two-photon-exchange (\abb{TPE}) contributions are included. Moreover these corrections alter mostly the results of the cross section method (which is very similar to our form-factor application). This leads us to the conclusion that the \abb{OPE} cross section presented in \Eq{el dsdt em} is only accurate for $|t| \ls 1\un{GeV^2}$.
 
-We have also calculated the Coulomb amplitude in the eikonal formalism, see \Eq{el cahn 2}. This amplitude receives contributions of all orders of $\al$ and thus may seem to include the \abb{TPE} corrections. It is only partially true. The amplitude has been generated via the eikonal relation \Eq{el eik app F} with the eikonal calculated from the \abb{OPE} amplitude. According to Sec.~6.2 in \bref{barone}, this procedure is (for large $s$) equivalent to summing diagrams of the type \Fg{el diagrams2} A. Thus only this type of diagrams is included in the eikonal calculation. We have seen that the eikonal complete amplitude differs from the Born ($\equiv$ \abb{OPE}) one merely by phase (see \Eq{el cahn 2}). This keeps the corresponding cross-section unchanged and thus it is insufficient to reconcile the two form-factor-extraction methods. These facts bring us to the conclusion that neither the eikonal full amplitude can be trusted above $|t|\approx 1\un{GeV^2}$.
+We have also calculated the Coulomb amplitude in the eikonal formalism, see \Eq{el cahn 2}. This amplitude receives contributions of all orders of $\al$ and thus may seem to include the \abb{TPE} corrections. It is only partially true. The amplitude has been generated via the eikonal relation \Eq{el eik app F} with the eikonal calculated from the \abb{OPE} amplitude. According to Sec.~6.2 in \bref{barone}, this procedure is (for large $s$) equivalent to summing diagrams of the type \Fg{el diagrams2} A. Thus only this type of diagrams is included in the eikonal calculation. We have seen that the eikonal complete amplitude differs from the Born ($\equiv$ \abb{OPE}) one merely by phase (see \Eq{el cahn 2}). This keeps the corresponding cross section unchanged and thus it is insufficient to reconcile the two form-factor-extraction methods. These facts bring us to the conclusion that neither the eikonal full amplitude can be trusted above $|t|\approx 1\un{GeV^2}$.
 
 \fig{fig/pdf/el_diagrams2.pdf}{el diagrams2}{A: The type of diagrams that is included in the eikonal calculation of the complete Coulomb amplitude. B -- E: the lowest order sub-diagrams missing in the eikonal calculation. The double line in E represents an excited state of the proton. The hollow dot is used to emphasize that the vertex function is, in principle, different than in the other diagrams.}
 
-The diagrams \Fg{el diagrams2} B and C lead to the renormalization of the proton vertex function and proton's mass. Therefore, they contribute to modifications of the form factors $G_{\rm E}(t)$ and $G_{\rm M}(t)$ that take place in the \abb{QED} vertex function (see e.g.~Sec.~6.3 in \bref{peskin}). However, since we use experimentally determined form factors (measured cross-section is matched to \abb{OPE} calculation) these modifications are implicitly included in our also-\abb{OPE} calculation.
+The diagrams \Fg{el diagrams2} B and C lead to the renormalization of the proton vertex function and proton's mass. Therefore, they contribute to modifications of the form factors $G_{\rm E}(t)$ and $G_{\rm M}(t)$ that take place in the \abb{QED} vertex function (see e.g.~Sec.~6.3 in \bref{peskin}). However, since we use experimentally determined form factors (measured cross section is matched to \abb{OPE} calculation) these modifications are implicitly included in our also-\abb{OPE} calculation.
 
-The diagram \Fg{el diagrams2} D results in the running of the coupling constant $\al$. If we identify the energy scale with $|t|$, \bref{mele06} gives $1/\al \approx 137$ at $|t| = 0\un{GeV^2}$, $134.8$ at $|t| = 1 \un{GeV^2}$ and $133.6$ at $10\un{GeV^2}$. Neglecting the $\al$-running leads to an error of $\al$ (for the cross-section it is thus twice that much) of about $1.6\percent$ at $|t| = 1 \un{GeV^2}$ and $2.5\percent$ at $|t| = 10 \un{GeV^2}$. It is clear that this effect by itself cannot account for the entire discrepancy between the two form-factor extraction methods. However, this effect is also neglected in the Coulomb-interference treatments. All the aforementioned interference phases are calculated in the $\O{\al}$ approximation, therefore one may expect a relative error of the phases to be of the order of $\al$, i.e.~about $0.7\percent$. However, for $|t| \gs 1\un{GeV^2}$, just the error from neglecting the running of $\al$ yields much higher values.
+The diagram \Fg{el diagrams2} D results in the running of the coupling constant $\al$. If we identify the energy scale with $|t|$, \bref{mele06} gives $1/\al \approx 137$ at $|t| = 0\un{GeV^2}$, $134.8$ at $|t| = 1 \un{GeV^2}$ and $133.6$ at $10\un{GeV^2}$. Neglecting the $\al$-running leads to an error of $\al$ (for the cross section it is thus twice that much) of about $1.6\percent$ at $|t| = 1 \un{GeV^2}$ and $2.5\percent$ at $|t| = 10 \un{GeV^2}$. It is clear that this effect by itself cannot account for the entire discrepancy between the two form-factor extraction methods. However, this effect is also neglected in the Coulomb-interference treatments. All the aforementioned interference phases are calculated in the $\O{\al}$ approximation, therefore one may expect a relative error of the phases to be of the order of $\al$, i.e.~about $0.7\percent$. However, for $|t| \gs 1\un{GeV^2}$, just the error from neglecting the running of $\al$ yields much higher values.
 
 The diagram \Fg{el diagrams2} E goes beyond the scope of the \abb{QED}. It reflects the fact that a photon-interaction can bring the proton to an excited state. In principle, such an excited state can be exchanged instead of a proton in any of the internal fermion propagators in the diagrams A, B, C and D, too. Similarly, the loop in the diagram D can contain any fermion. This makes the calculation of the \abb{TPE} corrections rather complex and we refer the reader to the above-quoted publications \bref{arrington07,puckett10,guichon03}.
 
@@ -538,7 +538,7 @@ These doubts led us to verify Cahn's formula by a complete eikonal calculation b
 Let us mention one conceptual issue of Cahn's interference formula \Eq{el phase Cahn} -- since the lower bound $T$ of the integral shall be taken to $-\infty$, the formula requires the knowledge of the hadronic amplitude $\FH(t)$ also outside the physical region, that is for $t < t_{\rm min}$. The origin of this trouble can be traced back to Cahn's using the eikonal approximation that assumes infinitely high energies (and thus $t_{\rm min} \to -\infty$), see our comments below \Eq{el eik rep}. While this is a serious issue from a theoretical point of view,  it has little practical impact for Coulomb-interference calculations. Too see this, one should consider the rapid fall off of the hadronic amplitude (it drops by more than six orders of magnitude between $|t|=0$ and $20\un{GeV^2}$, see \Fg{el mod dsdt large}). Moreover the hadronic amplitude enters the interference formula \Eq{el phase Cahn} as the ratio $\FH(t') / \FH(t)$, where $t$ is the point of evaluation and $t'$ is the integration variable. Therefore the ratio becomes negligible when $t'$ is much larger than $t$ -- in other words when $T$ is sufficiently large:
 \eqref{{\FH(t')\over \FH(t)} \approx 0\ , \quad\hbox{ for }\quad t' \gs t + T\ .}{el T 1}
 Assuming that this stays valid even if $t'$ enters the non-physical region,\footnote{%
-This can be justified at least for most of the eikonal-formulated hadronic models. Their impact-parameter amplitudes $A(b)$ are typically of a Gaussian-like profile with the \abb{RMS} of about $1\un{fm}$ (see e.g.~Fig.~6.6 in \bref{barone}). The $t$-amplitude can be calculated through \Eq{el eik rep}. For very high $|t|$ values the factor $J_0(b\sqrt{-t})$ becomes a rapidly oscillating function and one may expect a heavy suppression of the integral. No matter whether $t$ falls into the physical or non-physical region. This also explains the fast decrease of the hadronic differential cross-section. 
+This can be justified at least for most of the eikonal-formulated hadronic models. Their impact-parameter amplitudes $A(b)$ are typically of a Gaussian-like profile with the \abb{RMS} of about $1\un{fm}$ (see e.g.~Fig.~6.6 in \bref{barone}). The $t$-amplitude can be calculated through \Eq{el eik rep}. For very high $|t|$ values the factor $J_0(b\sqrt{-t})$ becomes a rapidly oscillating function and one may expect a heavy suppression of the integral. No matter whether $t$ falls into the physical or non-physical region. This also explains the fast decrease of the hadronic differential cross section. 
 } Cahn's formula \Eq{el phase Cahn} (without form factors) can be recast:
 \eqref{\Ps_{\rm Cahn}(t) =
 \pm \underbrace{\lim\limits_{\ta \to -\infty} \left[
@@ -557,7 +557,7 @@ Now, let us turn our attention to the interference formula of \KaL{}. First we h
 
 Then, the publication \bref{kl94} contains a miss-print below Eq.~(11) -- there, the symbol $\Om_{q'}$ should denote the set of all momentum transfers, i.e.~$\mathbb{R}^2$. Otherwise their Eq.~(9) would not hold and their Eqs.~(12) and (13) would not yield Eq.~(14). However later, starting with their Eq.~(17), the symbol $\Om_{q'}$ really refers to the physical region of momentum transfer $|\vec q'| < \sqrt{-t_{\rm min}}$. The authors forgot to mention their assumption (motivated by their intuition) that the Coulomb amplitude $\FC(t = -\vec q^2)$ vanishes outside the physics region of momentum transfers. Taking this assumption, the integration regions of the integrals in their Eqs.~(9) and (17) really shrink from $\mathbb R^2$ to $\Om_{q'}$. However, strictly speaking, this assumption contradicts their Eq.~(15), where the Coulomb amplitude $\FC(t) \propto 1/t$ does not vanish for $t < t_{\rm min}$. Although it does not strictly vanish, its values are very small. This is even reinforced by the rapid decrease of the hadronic amplitude $\FH(t)$, as discussed above \Eq{el T 2}. Therefore one may conclude that the net effect of truncating the integrals in \Eq{el phase KL} at $t_{\rm min}$ is entirely negligible.
 
-Eventually, let us remark that the formula of \KaL{} neglects the form-factor-induced modification of the Coulomb phase $\nu(t)$. However, we have shown that this correction is small -- compare \Fg{el cic diff nu} to \Fg{el cic noff FC} (right) -- and thus has only a marginal impact on the measurable cross-section, see e.g.~\Fg{el cic noff Z}.
+Eventually, let us remark that the formula of \KaL{} neglects the form-factor-induced modification of the Coulomb phase $\nu(t)$. However, we have shown that this correction is small -- compare \Fg{el cic diff nu} to \Fg{el cic noff FC} (right) -- and thus has only a marginal impact on the measurable cross section, see e.g.~\Fg{el cic noff Z}.
 
 
 \subsection[int cmp]{Comparison of interference formulae}
@@ -589,7 +589,7 @@ Cahn found his result \Eq{el phase Cahn} agree with the one of \WY{} \Eq{el phas
 
 One of the quantities that can demonstrate the difference between Cahns's (or corrected \KL) and \WY{} formulae is the \em{interference importance} function
 \eqref{Z(t) = {|F^{\rm C+H}(t)|^2 - |F^{\rm C}(t)|^2 - |F^{\rm H}(t)|^2\over |F^{\rm C+H}(t)|^2}\ ,}{el Z}
-which gives a relative importance of the Coulomb interference in the cross-section. \Fg{el cic noff Z} shows this function plotted for the case of no form factor. Up to $|t| \approx 0.1\un{GeV^2}$ all formulae agree, but then a dramatic difference occurs at the position of the first diffractive dip ($|t|\approx 0.5\un{GeV^2}$). This is the point where the imaginary parts of the phases reach large values, cf.~\Fg{el cic noff Psi}.
+which gives a relative importance of the Coulomb interference in the cross section. \Fg{el cic noff Z} shows this function plotted for the case of no form factor. Up to $|t| \approx 0.1\un{GeV^2}$ all formulae agree, but then a dramatic difference occurs at the position of the first diffractive dip ($|t|\approx 0.5\un{GeV^2}$). This is the point where the imaginary parts of the phases reach large values, cf.~\Fg{el cic noff Psi}.
 
 \fig{fig/pdf/el_cic_noff_Z.pdf}{el cic noff Z}{Left: the interference importance function $Z(t)$. Right: the $\ze(t)$. Both: no form factor included, solid lines represent the complete-eikonal calculation.}
 
@@ -597,7 +597,7 @@ In fact, the interference importance function can only gain non-negligible value
 \eqref{\ze(t) = {2\over {|\FH(t)|\over |\FC(t)|} + {|\FC(t)|\over |\FH(t)|}}\ .}{el zeta}
 The function $\ze(t)$ tends to one when both amplitudes are similar and tends to zero if either of them dominates. The $\ze(t)$ function, for the no-form-factor case, is plotted in \Fg{el cic noff Z} left and indeed, the peak structure is similar as for the interference importance $Z(t)$. The first broad peak corresponds to the crossing of the Coulomb and hadronic amplitudes, the next ones correspond to the diffractive dips of the hadronic model, where the hadronic amplitude drops closer to the Coulomb one.
 
-\Fg{el cic diff Z ff} shows the interference importance functions for several form factor choices. Again, the largest difference occurs at the position of the first dip and again, we find the simplification of the \WaY{} formula not suitable for higher $|t|$ values. A comparison of \KL{} formula to the complete-eikonal calculation can be found in \Fg{el cic diff Z eik} left. The only difference is the disagreement of about $1\%$ at $|t| \approx 0.5\un{GeV^2}$ (the first dip of the hadronic model). The fact that one can see so little difference in the cross-section (compared to the interference phase in \Fg{el cic diff Psi eik}) reflects the low sensitivity of the cross-section to the interference phase. This (in)sensitivity is quantified by the $\ze$ function in \Fg{el cic diff Z eik} right.
+\Fg{el cic diff Z ff} shows the interference importance functions for several form factor choices. Again, the largest difference occurs at the position of the first dip and again, we find the simplification of the \WaY{} formula not suitable for higher $|t|$ values. A comparison of \KL{} formula to the complete-eikonal calculation can be found in \Fg{el cic diff Z eik} left. The only difference is the disagreement of about $1\%$ at $|t| \approx 0.5\un{GeV^2}$ (the first dip of the hadronic model). The fact that one can see so little difference in the cross section (compared to the interference phase in \Fg{el cic diff Psi eik}) reflects the low sensitivity of the cross section to the interference phase. This (in)sensitivity is quantified by the $\ze$ function in \Fg{el cic diff Z eik} right.
 
 \fig{fig/pdf/el_cic_diff_Z_ff.pdf}{el cic diff Z ff}{The importance of the Coulomb-interference ($Z$ function) for different form factors and different formulae.}
 
@@ -608,11 +608,11 @@ The function $\ze(t)$ tends to one when both amplitudes are similar and tends to
 
 \subsection[int mod]{Coulomb interference for different hadronic models}
 
-So far we have used only the model of Bourrely et al. In the next few plots we will show some interference-related quantities calculated with the formula of \KaL{} (\Eq{el phase KL}) including the form factor of Puckett. \Fg{el mod Z} shows the importance of the interference term. As expected, the peaks occur at the positions of dips and shoulders of the hadronic cross-section, cf.~\Fg{el mod dsdt narrow}.
+So far we have used only the model of Bourrely et al. In the next few plots we will show some interference-related quantities calculated with the formula of \KaL{} (\Eq{el phase KL}) including the form factor of Puckett. \Fg{el mod Z} shows the importance of the interference term. As expected, the peaks occur at the positions of dips and shoulders of the hadronic cross section, cf.~\Fg{el mod dsdt narrow}.
 
 \Fg{el mod C} evaluates the contribution of the electromagnetic interaction to the total scattering. It is done via the function
 \eqref{C(t) = {|F^{\rm C+H}(t)|^2 - |F^{\rm H}(t)|^2\over |F^{\rm H}(t)|^2}\ .}{el C}
-It is evident that the electromagnetic contribution can not be neglected even for $|t|$ up to $5\un{GeV^2}$. Again, the relative contributions see enhancements at the dips and shoulders of the hadronic cross-section.
+It is evident that the electromagnetic contribution can not be neglected even for $|t|$ up to $5\un{GeV^2}$. Again, the relative contributions see enhancements at the dips and shoulders of the hadronic cross section.
 
 \fig{fig/pdf/el_mod_Z.pdf}{el mod Z}{The importance of the interference term (see \Eq{el Z}) as a function of $t$. Calculated with CKL formula and Puckett form factor.}
 
@@ -637,6 +637,6 @@ We have introduced the corrected \KaL{} formula which unifies the interference r
 
 We have performed a complete-eikonal calculation of the total amplitude, to all orders of $\al$. While the main goal was a comparison with the $\O{\al}$ \KaL{} formula, we have also extracted the form-factor-induced shift of the Coulomb phase $\nu(t)$. It yields an improvement compared to the attempts of Cahn and Selyugin.
 
-We have compared the interference phases obtained with the complete-eikonal calculation and the formula of \KaL{} and we have found non-negligible differences for both cases with and without form factor. A similar comparison has been done on the level of cross-section, where the differences are much less pronounced. We have shown that this is due to a low sensitivity of the cross-section to the interference phase. The sensitivity is non-negligible only in the region where the Coulomb and hadronic amplitudes cross ($|t|\approx 10^{-3}\un{GeV^2}$ at \abb{LHC} energies) and at the diffractive dips of the hadronic model.
+We have compared the interference phases obtained with the complete-eikonal calculation and the formula of \KaL{} and we have found non-negligible differences for both cases with and without form factor. A similar comparison has been done on the level of cross section, where the differences are much less pronounced. We have shown that this is due to a low sensitivity of the cross section to the interference phase. The sensitivity is non-negligible only in the region where the Coulomb and hadronic amplitudes cross ($|t|\approx 10^{-3}\un{GeV^2}$ at \abb{LHC} energies) and at the diffractive dips of the hadronic model.
 
 We have found the (corrected) \KaL{} formula the most accurate tool available for experimental data analyses, where high computational performance is needed. However, for $|t| \gs 1\un{GeV^2}$ we expect large corrections due to multi-photon exchange effects that are not included in the present eikonal description.
