--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -1,10 +1,10 @@
 \chapter[felm]{The first elastic scattering measurement at the LHC}
 
-This chapter is devoted to the first measurement of the elastic scattering differential cross-section at the \abb{LHC}. This achievement, published in \bref{totem11}, is a result of efforts of the entire \abb{TOTEM} collaboration. After a brief overview of the analysis procedure, we will focus on the contributions by the author of this thesis. A comparison to model predictions will be shown at the end of the chapter (\Sc{felm cmp}).
+This chapter is devoted to the first measurement of the elastic scattering differential cross section at the \abb{LHC}. This achievement, published in \bref{totem11}, is a result of efforts of the entire \abb{TOTEM} collaboration. After a brief overview of the analysis procedure, we will focus on the contributions by the author of this thesis. A comparison to model predictions will be shown at the end of the chapter (\Sc{felm cmp}).
 
-This analysis is based on the data from 29-30 October, when the \abb{LHC} was running at the standard 2010 optics with $\be^* = 3.5\un{m}$ and $\sqrt s = 7\un{TeV}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The vertical effective lengths in the $220\un{m}$ stations lay in the range $L_y = (22 \hbox{ -- } 23)\un{m}$. The horizontal scattering angles were reconstructed from the track angles between near and far units (see \Eq{felm xy reco}). The proportionality factors $\d L_{x}/\d z$ had values of about $0.31$. A dedicated run with four low-luminosity bunches ($7\cdot10^{10}$ protons per bunch) was used. The normalized emittance was about $2\un{\mu m\ rad}$, which yielded the beam divergence $\si_{\th^*} \approx 17\un{\mu rad}$. For this special run the \abb{RP}s were approached as close as $7\si$ to the beam. This allowed us to measure the elastic differential cross-section down to $|t| = 0.36\un{GeV^2}$. The event sample used for the analysis (with horizontal \abb{RP}s retracted) corresponds to an integrated luminosity of $6.1\un{nb^{-1}}$.
+This analysis is based on the data from 29-30 October, when the \abb{LHC} was running at the standard 2010 optics with $\be^* = 3.5\un{m}$ and $\sqrt s = 7\un{TeV}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The vertical effective lengths in the $220\un{m}$ stations lay in the range $L_y = (22 \hbox{ -- } 23)\un{m}$. The horizontal scattering angles were reconstructed from the track angles between near and far units (see \Eq{felm xy reco}). The proportionality factors $\d L_{x}/\d z$ had values of about $0.31$. A dedicated run with four low-luminosity bunches ($7\cdot10^{10}$ protons per bunch) was used. The normalized emittance was about $2\un{\mu m\ rad}$, which yielded the beam divergence $\si_{\th^*} \approx 17\un{\mu rad}$. For this special run the \abb{RP}s were approached as close as $7\si$ to the beam. This allowed us to measure the elastic differential cross section down to $|t| = 0.36\un{GeV^2}$. The event sample used for the analysis (with horizontal \abb{RP}s retracted) corresponds to an integrated luminosity of $6.1\un{nb^{-1}}$.
 
-\fig{fig/pdf/felm_scheme.pdf}{felm scheme}{The analysis work-flow, from raw data to the differential cross-section of the elastic scattering.}
+\fig{fig/pdf/felm_scheme.pdf}{felm scheme}{The analysis work-flow, from raw data to the differential cross section of the elastic scattering.}
 
 \Fg{felm scheme} reviews the analysis steps, each of them is briefly described below. But before going into details, let us explain the terminology used. The sector 45 (56) is called left (right) arm of the \abb{TOTEM} experiment. The elastic events consist of two protons with practically opposite directions (up to beam divergence). Thus from detector point of view, they split into two groups -- with top \abb{RP}s active in the sector 45 (so called \em{diagonal} 45 top -- 56 bottom) or with top \abb{RP}s active in the sector 56 (diagonal 45 bottom -- 56 top).
 
@@ -36,9 +36,9 @@ Let us comment on the vertex terms (see \Eq{ttm lin par}) that might seem to be 
 
 \> The {\bf unsmearing} is a procedure that accounts for the finite resolution of the \abb{RP}s detectors and the beam smearing effects, for details see \Sc{felm unfold}.
 
-\> In the {\bf normalization} step, the event-count histograms $\d N/\d t$ are transformed in the differential cross-section histograms $\d\si/\d t$. For that purpose, the luminosity and various efficiency factors (trigger, detection, reconstruction, etc.) are used.
+\> In the {\bf normalization} step, the event-count histograms $\d N/\d t$ are transformed in the differential cross section histograms $\d\si/\d t$. For that purpose, the luminosity and various efficiency factors (trigger, detection, reconstruction, etc.) are used.
 
-\> {\bf Merging diagonals}. The results from both diagonals are merged and the final differential cross-section histogram is produced.
+\> {\bf Merging diagonals}. The results from both diagonals are merged and the final differential cross section histogram is produced.
 
 
 
@@ -59,7 +59,7 @@ As \Eq{felm cut} suggests, all cuts have been applied on the $3\si$-level. There
 
 The task can be split into three parts: the \em{integral} (the number of background events which have passed the selection), the \em{distribution} (in $t_x$ and $t_y$) and the \em{contribution to the elastic $t$-distribution}.
 
-But before the analysis, let us mention what background contributions we expect. From the physics processes these are mainly double pomeron exchange (\abb{DPE}) events or the pile-up of two single diffraction (\abb{SD}) events. With the luminosity per bunch collision of about $1.4\cdot10^{25}\un{cm^{-2}}$ and the cross-sections $6.8\un{mb}$ (for \abb{SD} from Pythia) and $1.3\un{mb}$ (for \abb{DPE} from Phojet) one obtains per-bunch event probabilities $0.014$ (\abb{DPE}) and $0.008$ (twice \abb{SD} with a proton in each arm). Thus both contributions are roughly on the same level of importance. The output of the mentioned \abb{MC} generators can be, in a first approximation, parameterized as follows:
+But before the analysis, let us mention what background contributions we expect. From the physics processes these are mainly double pomeron exchange (\abb{DPE}) events or the pile-up of two single diffraction (\abb{SD}) events. With the luminosity per bunch collision of about $1.4\cdot10^{25}\un{cm^{-2}}$ and the cross sections $6.8\un{mb}$ (for \abb{SD} from Pythia) and $1.3\un{mb}$ (for \abb{DPE} from Phojet) one obtains per-bunch event probabilities $0.014$ (\abb{DPE}) and $0.008$ (twice \abb{SD} with a proton in each arm). Thus both contributions are roughly on the same level of importance. The output of the mentioned \abb{MC} generators can be, in a first approximation, parameterized as follows:
 \eqref{
 {\d\si^{\rm SD}\over\d\xi\, \d t } \sim {\e^{b t}\over \xi^{1+\ep}}\ ,\qquad
 {\d\si^{\rm DPE}\over\d\xi_{\rm L} \d t_{\rm L} \d\xi_{\rm R} \d t_{\rm R} } \sim {\e^{b t_{\rm L}}\over \xi^{1+\ep}_{\rm L}} {\e^{b t_{\rm R}}\over \xi_{\rm R}^{1+\ep}}
@@ -91,7 +91,7 @@ N_{\rm B} & 2500 \pm 300 & 2700 \pm 300\cr\bln
 
 \block{The distribution}
 
-We will assume that the left and right protons are independent in the background events. First of all, it is a reasonable assumption. For pile-up background (\abb{SD}, beam-gas) it is evident. For \abb{DPE} described by the cross-section \Eq{felm sd dpe cs} it holds too. Had we enough background data, we could test this hypothesis, however we will see that the statistics is not rich. Taking the assumption, we can factorize the two-proton distribution $h_{\rm 2p}$ into one-proton distributions $h_{\rm 1p}$:
+We will assume that the left and right protons are independent in the background events. First of all, it is a reasonable assumption. For pile-up background (\abb{SD}, beam-gas) it is evident. For \abb{DPE} described by the cross section \Eq{felm sd dpe cs} it holds too. Had we enough background data, we could test this hypothesis, however we will see that the statistics is not rich. Taking the assumption, we can factorize the two-proton distribution $h_{\rm 2p}$ into one-proton distributions $h_{\rm 1p}$:
 \eqref{h_{\rm 2p}(t_x^{\rm L}, t_y^{\rm L}, t_x^{\rm R}, t_y^{\rm R}) = h_{\rm 1p}(t_x^{\rm L}, t_y^{\rm L})\ h_{\rm 1p}(t_x^{\rm R}, t_y^{\rm R})\ .}{felm bckg dist fact}
 
 We consider these distributions as functions of $t$'s only since we are investigating the background to elastic scattering. Elastic protons have $\xi\equiv 0$ by definition, therefore only $t_x$ and $t_y$ are reconstructed. The same applies to inelastic protons that pass the elastic-event selection as background events. Their $\xi$ distribution is absorbed to an effective $t_x$ and $t_y$ distribution.
@@ -116,7 +116,7 @@ h_{\rm O}(t_x^{\rm L}, t_y^{\rm L}) & = &
 	\ \Th(|t_y^{\rm L}| > |t_y^{\rm L}|_{\rm min})
 \ .\cr
 }}{felm bckg dist obs}
-An example of such distribution is shown in \Fg{felm background dist txty}. To build the histogram, we have used only the events that have failed cut 1 ($\th_x$ collinearity), which anyway provides most background events. One can clearly see the acceptance cut around $|t_y| = 0.3\un{GeV^2}$ (see also \Tb{felm bckg results}), the effect of the last $\Th$ function in \Eq{felm bckg dist obs}. The distribution seems to decrease exponentially with $t = t_x + t_y$, something one would naively expect from the \abb{SD} and \abb{DPE} cross-sections \Eq{felm sd dpe cs}. However, if $t$ was distributed exponentially $\exp(b t)$, the corresponding distribution of $t_x$ and $t_y$ would be $\exp(b t_x + b t_y)/\sqrt{t_x t_y}$
+An example of such distribution is shown in \Fg{felm background dist txty}. To build the histogram, we have used only the events that have failed cut 1 ($\th_x$ collinearity), which anyway provides most background events. One can clearly see the acceptance cut around $|t_y| = 0.3\un{GeV^2}$ (see also \Tb{felm bckg results}), the effect of the last $\Th$ function in \Eq{felm bckg dist obs}. The distribution seems to decrease exponentially with $t = t_x + t_y$, something one would naively expect from the \abb{SD} and \abb{DPE} cross sections \Eq{felm sd dpe cs}. However, if $t$ was distributed exponentially $\exp(b t)$, the corresponding distribution of $t_x$ and $t_y$ would be $\exp(b t_x + b t_y)/\sqrt{t_x t_y}$
 %(the square-root factor comes from the Jacobian)
 . Moreover, we reconstruct the background protons as elastic: the effect of non-zero $\xi$ is absorbed into the observed $t_x$ vs.~$t_y$ distribution. Since the dispersion acts mostly in the horizontal direction, we may expect the $t_x$-distribution to be altered. This consideration has led us to try the suggested parameterization with $b$'s independent for $x$ and $y$:
 \eqref{h_{\rm 1p}(t_x, t_y) \propto {\e^{b_x t_x}\over \sqrt{-t_x}} {\e^{b_y t_y}\over \sqrt{-t_y}}\ .}{felm dist param}
@@ -190,7 +190,7 @@ $\si_{\rm R} \approx 0.4\un{\mu rad}$ for $y$ and $5.7\un{\mu rad}$ for $x$ proj
 \eqref{\si(\De\th_x) \simeq \si(\De\th_y) = (12.5\pm 0.5)\un{\mu rad}\ .}{felm unf sigma proj}
 
 Suppose that $h(\th)$ is the true distribution of the (non-smeared) scattering angle $\th$
-%($h(\th)$ proportional to $\d\si/\d\th$ cross-section)
+%($h(\th)$ proportional to $\d\si/\d\th$ cross section)
 . Then, after the acceptance correction etc., we would reconstruct a distribution $h'(\th')$ smeared due to the finite angular resolution. These distributions can be related by an integral transformation (see e.g.~Sec.~16.6.1 in \bref{riley10} or Sec.~1.8.2 in \bref{becvar}):
 \eqref{h'(\th') = \int {\d\ph\over 2\pi} \int \d\De\th_x\ E(\De\th_x) \int \d\De\th_y\ E(\De\th_y)
 	\ \left| \d\th\over\d\th' \right|\ h(\th)\ ,
@@ -213,7 +213,7 @@ We will now describe two unsmearing methods: a fit-based and a bin-based method.
 
 \block{The fit-based method}
 
-The idea of this method is to describe the data with a function for which the unsmearing (reverse transform \Eq{felm unf sm model sim}) can be done analytically. Moreover, the function shall provide a realistic extrapolation to the low-$\th$ region, where we miss acceptance. In that region we expect the cross-section to be well approximated by $\d\si/\d t \propto \exp(bt)$. This translates into the $\th$-distribution as $h(\th) \propto \th \exp(-bp^2 \th^2)$.
+The idea of this method is to describe the data with a function for which the unsmearing (reverse transform \Eq{felm unf sm model sim}) can be done analytically. Moreover, the function shall provide a realistic extrapolation to the low-$\th$ region, where we miss acceptance. In that region we expect the cross section to be well approximated by $\d\si/\d t \propto \exp(bt)$. This translates into the $\th$-distribution as $h(\th) \propto \th \exp(-bp^2 \th^2)$.
 
 We have parameterized the data ($\th'$ histogram) by
 \eqref{h'(\th') = H(\th') + \sum_{i = 1}^3 G_i(\th'),
@@ -274,8 +274,8 @@ The fit-based and bin-based methods are compared in \Fg{felm unfolding m1m2 cmp}
 
 The final cross-section distribution compared to the predictions of the models from \Sc{el models} and the model of Jenkovszky et al.~\bref{jenkovszky11} is shown in \Fg{ttm mod cmp dsdt}. The discriminative power of \abb{TOTEM}'s measurement is evident. In the region below the diffractive dip, $|t| \ls 0.5\un{GeV^2}$, there is a relatively good agreement among the models themselves and the measurement. But for momentum transfers $|t|$ between $0.5$ and $1\un{GeV^2}$ the models exhibit a rather large spread in their predictions (one and half orders). Moreover the measurement of \abb{TOTEM} does not favour any of the presented models. The measurement falls into a gap between two bands of predictions (one band is formed by the models of Islam et al., Petrov et al.~with two pomerons and Jenkovszky et al., the other band is formed by the models of Block et al., Bourrely et al.~and Petrov et al.~with three pomerons).
 
-\fig{fig/pdf/ttm_mod_cmp_dsdt.pdf}{ttm mod cmp dsdt}{Comparison of model predictions and \abb{TOTEM}'s first measurement of $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$.}
+\fig{fig/pdf/ttm_mod_cmp_dsdt.pdf}{ttm mod cmp dsdt}{Comparison of model predictions and \abb{TOTEM}'s first measurement of $\rm pp$ differential cross section at $\sqrt s = 7\un{TeV}$.}
 
-We have extracted the exponential slope $B$ (see \Eq{el B}) from \abb{TOTEM}'s cross-section measurement (thick black histogram in \Fg{ttm mod cmp dsdt}). We have split the histogram into groups of six consecutive bins. Each of these groups was fitted with an exponential, resulting in a point in in \Fg{ttm mod cmp B}. The horizontal error bars indicate the span of the six-bin groups, the vertical error bars reflect the fit uncertainty. The discriminative power of this plot is smaller ($B$ accounts only for the ``shape'' and not the normalization of the cross-section), but still one can conclude that the models of Jenkovszky et al.~and of Petrov et al.~(the two-pomeron version) are disfavored by \abb{TOTEM}'s data.
+We have extracted the exponential slope $B$ (see \Eq{el B}) from \abb{TOTEM}'s cross section measurement (thick black histogram in \Fg{ttm mod cmp dsdt}). We have split the histogram into groups of six consecutive bins. Each of these groups was fitted with an exponential, resulting in a point in in \Fg{ttm mod cmp B}. The horizontal error bars indicate the span of the six-bin groups, the vertical error bars reflect the fit uncertainty. The discriminative power of this plot is smaller ($B$ accounts only for the ``shape'' and not the normalization of the cross section), but still one can conclude that the models of Jenkovszky et al.~and of Petrov et al.~(the two-pomeron version) are disfavored by \abb{TOTEM}'s data.
 
-\fig{fig/pdf/ttm_mod_cmp_B.pdf}{ttm mod cmp B}{Comparison of the exponential slope $B$ from model predictions and \abb{TOTEM}'s first measurement of $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$.}
+\fig{fig/pdf/ttm_mod_cmp_B.pdf}{ttm mod cmp B}{Comparison of the exponential slope $B$ from model predictions and \abb{TOTEM}'s first measurement of $\rm pp$ differential cross section at $\sqrt s = 7\un{TeV}$.}
