--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -4,23 +4,23 @@
 
 The \abb{TOTEM} experiment \bref{totem04,totem08,totem10} is dedicated to measurement of forward hadronic phenomena at the \abb{LHC}. The tree pillars of its physics programme are:
 \> elastic scattering measurement in a wide $t$-range,
-\> total cross-section measurement and
+\> total cross section measurement and
 \> a study of soft and hard diffraction.
 \vskip\itskip
 
-We have discussed several theoretical/phenomenological descriptions of the elastic scattering in \Sc{el}. Looking at the model predictions in \Fg{el mod dsdt large}, one can see differences of several orders of magnitude. \abb{TOTEM} plans to measure the differential cross-section in the $|t|$-range from about $10^{-3}\un{GeV^2}$ (the domain of Coulomb-hadronic interference) to more than $10\un{GeV^2}$. This large coverage can be achieved by exploiting several running scenarios -- see the end of \Sc{rp measurement}. The discriminative power of such a measurement can already be seen in the first \abb{TOTEM} results, see \Fg{ttm mod cmp dsdt} in the conclusion chapter.
+We have discussed several theoretical/phenomenological descriptions of the elastic scattering in \Sc{el}. Looking at the model predictions in \Fg{el mod dsdt large}, one can see differences of several orders of magnitude. \abb{TOTEM} plans to measure the differential cross section in the $|t|$-range from about $10^{-3}\un{GeV^2}$ (the domain of Coulomb-hadronic interference) to more than $10\un{GeV^2}$. This large coverage can be achieved by exploiting several running scenarios -- see the end of \Sc{rp measurement}. The discriminative power of such a measurement can already be seen in the first \abb{TOTEM} results, see \Fg{ttm mod cmp dsdt} in the conclusion chapter.
 
-\fig{fig/pdf/ttm_sigma_tot.pdf}{sigma tot}{The total cross-section as a function of the centre-of-mass energy. The green ($\rm\bar pp$) and blue ($\rm pp$) hollow dots represent the data from PDG \bref{pdg10}. For some of the points we have marked the source experiments (the vertical order of the labels respects the vertical order of the points). The red dot is a recent result from \abb{TOTEM} \bref{totem11-2}. This new measurement is not included in the COMPETE fits \bref{cudell02}. The solid black line represents their best fit, the dashed lines show the total error band from all models considered. The magenta cross represents the targeted precision of the \abb{TOTEM} experiment.}
+\fig{fig/pdf/ttm_sigma_tot.pdf}{sigma tot}{The total cross section as a function of the centre-of-mass energy. The green ($\rm\bar pp$) and blue ($\rm pp$) hollow dots represent the data from PDG \bref{pdg10}. For some of the points we have marked the source experiments (the vertical order of the labels respects the vertical order of the points). The red dot is a recent result from \abb{TOTEM} \bref{totem11-2}. This new measurement is not included in the COMPETE fits \bref{cudell02}. The solid black line represents their best fit, the dashed lines show the total error band from all models considered. The magenta cross represents the targeted precision of the \abb{TOTEM} experiment.}
 
-As much as the model predictions differ for the elastic cross-section, they differ for the total-cross section. From Tab.~2 in \bref{kklp11} one can read a variation between $95$ and $110\un{mb}$ for the energy of $14\un{TeV}$. Extrapolations from lower energy measurements yield an even higher uncertainty: from about $85\un{mb}$ to $120\un{mb}$ (see the dashed lines in \Fg{sigma tot}). \abb{TOTEM} plans to measure the total cross-section with the luminosity independent method, see \Sc{ttm tcs} for details. This method takes as an input the elastic and inelastic event rates and thus is closely related to the other two items of the physics programme. \abb{TOTEM} aims at a final precision of about $1\percent$ (see the magenta cross in \Fg{sigma tot}), which would provide a decisive answer to many total cross-section related hypotheses.
+As much as the model predictions differ for the elastic cross section, they differ for the total-cross section. From Tab.~2 in \bref{kklp11} one can read a variation between $95$ and $110\un{mb}$ for the energy of $14\un{TeV}$. Extrapolations from lower energy measurements yield an even higher uncertainty: from about $85\un{mb}$ to $120\un{mb}$ (see the dashed lines in \Fg{sigma tot}). \abb{TOTEM} plans to measure the total cross section with the luminosity independent method, see \Sc{ttm tcs} for details. This method takes as an input the elastic and inelastic event rates and thus is closely related to the other two items of the physics programme. \abb{TOTEM} aims at a final precision of about $1\percent$ (see the magenta cross in \Fg{sigma tot}), which would provide a decisive answer to many total cross section related hypotheses.
 
-\Fg{ttm processes} shows typical event topologies for certain diffractive process classes that \abb{TOTEM} plans to measure. Looking at the cross-section estimates, one can see that these processes constitute a large part of the total cross-section. A characteristic property of these processes is the presence of scattering products in very forward directions, alternatively described by high pseudorapidities
+\Fg{ttm processes} shows typical event topologies for certain diffractive process classes that \abb{TOTEM} plans to measure. Looking at the cross section estimates, one can see that these processes constitute a large part of the total cross section. A characteristic property of these processes is the presence of scattering products in very forward directions, alternatively described by high pseudorapidities
 \eqref{\et = - \log \tan {\th\over 2}\ .}{pseudorapidity}
 
-\fig{fig/pdf/ttm_processes.pdf}{ttm processes}{Diffractive process classes with a cross-section estimate for the center-of-mass energy $\sqrt s = 14\un{TeV}$. For each class there are two types of diagrams (using the same color code). Left: a Feynman-like diagram showing the nature of the process, with Pomeron exchange (the double lines) as an effective description of the diffraction phenomena. Single external lines denote protons, the triple outgoing lines represent proton dissociation. Right: a sample hit map in the pseudorapidity ($\et$) vs.~azimuthal angle ($\ph$) space.}
+\fig{fig/pdf/ttm_processes.pdf}{ttm processes}{Diffractive process classes with a cross section estimate for the center-of-mass energy $\sqrt s = 14\un{TeV}$. For each class there are two types of diagrams (using the same color code). Left: a Feynman-like diagram showing the nature of the process, with Pomeron exchange (the double lines) as an effective description of the diffraction phenomena. Single external lines denote protons, the triple outgoing lines represent proton dissociation. Right: a sample hit map in the pseudorapidity ($\et$) vs.~azimuthal angle ($\ph$) space.}
 
 
-\abb{TOTEM}'s physics programme thus sets special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, \abb{TOTEM} comprises three sub-detectors: the tracking \em{telescopes \abb{T1} and \abb{T2}} and a system of \em{Roman Pots} (\abb{RP}s). The role of the telescopes is to detect the products of inelastic collisions. They are able to reconstruct many tracks per event and extrapolate them to the interaction point (\abb{IP}), which is essential for background rejection. The telescopes were designed to withstand the high radiation load expected at their location. The role of the \abb{RP} system is to detect the surviving protons. As indicated in \Fg{ttm processes}, these are scattered to very small angles. That is why the \abb{RP}s are installed far from the \abb{IP} (scattered protons can gain larger deviations from the beam) and can be approached very close to the beam (to detect protons with small deviations, that is with small scattering angles). For safety reasons, no detectors are allowed to be inside the beam-pipe before the beam is stable. This means that the \abb{RP}s must be movable beam-pipe insertions, retracted to a safe position during beam injection and adjustments and approached close to the beam for measurements. All three sub-detectors are trigger capable which is crucial for the total cross-section measurement.
+\abb{TOTEM}'s physics programme thus sets special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, \abb{TOTEM} comprises three sub-detectors: the tracking \em{telescopes \abb{T1} and \abb{T2}} and a system of \em{Roman Pots} (\abb{RP}s). The role of the telescopes is to detect the products of inelastic collisions. They are able to reconstruct many tracks per event and extrapolate them to the interaction point (\abb{IP}), which is essential for background rejection. The telescopes were designed to withstand the high radiation load expected at their location. The role of the \abb{RP} system is to detect the surviving protons. As indicated in \Fg{ttm processes}, these are scattered to very small angles. That is why the \abb{RP}s are installed far from the \abb{IP} (scattered protons can gain larger deviations from the beam) and can be approached very close to the beam (to detect protons with small deviations, that is with small scattering angles). For safety reasons, no detectors are allowed to be inside the beam-pipe before the beam is stable. This means that the \abb{RP}s must be movable beam-pipe insertions, retracted to a safe position during beam injection and adjustments and approached close to the beam for measurements. All three sub-detectors are trigger capable which is crucial for the total cross section measurement.
 
 
 
@@ -200,9 +200,9 @@ Since the optics \Eq{ttm lin par} relates the kinematics of a proton at the \abb
 
 The rich physics programme of \abb{TOTEM} requires several running scenarios, including several optics. We will now review the scenarios as they were originally foreseen for the center-of-mass energy $\sqrt s = 14\un{TeV}$. The main characteristics stay the same for the reduced energy of $7\un{TeV}$ -- see for example the optics used for the first elastic scattering measurement, presented in \Sc{felm}. We will classify the scenarios by the beta-function values at the interaction point $\be^*$.
 
-\> The \em{high-$\be^*$} scenario is dedicated to the measurement of the total cross-section and low-$|t|$ elastic scattering. The optics with $\be^* = 1535\un{m}$ provides high effective lengths: $L_x$ up to $110\un{m}$ and $L_y$ up to $270\un{m}$ (both in the $220\un{m}$ stations). This ensures a good $t$-resolution (see \Sc{elr 1535}). To improve it further, this scenario counts on a reduced normalized emittance of $\ep_{\rm N}=1\un{\mu m\ rad}$. This leads to a very low beam divergence at the \abb{IP} $\si_{\th^*} = 0.3\un{\mu rad}$. The expected beam sizes (i.e.~the beam sigmas) at the $220\un{m}$ stations are $\si_x = 0.03\un{mm}$ and $\si_y = 0.085\un{mm}$. The beam size, quite generally, determines the approach of the \abb{RP}s to the beam -- a typical approach is about $10\si$ in each direction. The resulting elastic acceptance is drawn in red in \Fg{ttm elastic acceptance}. The acceptance reaches $30\percent$ at $|t_{30}| = 2\cdot10^{-3}\un{GeV^2}$. This scenario will use a rather low luminosity ${\cal L} \ls 10^{28} \un{cm^{-2}s^{-1}}$.
+\> The \em{high-$\be^*$} scenario is dedicated to the measurement of the total cross section and low-$|t|$ elastic scattering. The optics with $\be^* = 1535\un{m}$ provides high effective lengths: $L_x$ up to $110\un{m}$ and $L_y$ up to $270\un{m}$ (both in the $220\un{m}$ stations). This ensures a good $t$-resolution (see \Sc{elr 1535}). To improve it further, this scenario counts on a reduced normalized emittance of $\ep_{\rm N}=1\un{\mu m\ rad}$. This leads to a very low beam divergence at the \abb{IP} $\si_{\th^*} = 0.3\un{\mu rad}$. The expected beam sizes (i.e.~the beam sigmas) at the $220\un{m}$ stations are $\si_x = 0.03\un{mm}$ and $\si_y = 0.085\un{mm}$. The beam size, quite generally, determines the approach of the \abb{RP}s to the beam -- a typical approach is about $10\si$ in each direction. The resulting elastic acceptance is drawn in red in \Fg{ttm elastic acceptance}. The acceptance reaches $30\percent$ at $|t_{30}| = 2\cdot10^{-3}\un{GeV^2}$. This scenario will use a rather low luminosity ${\cal L} \ls 10^{28} \un{cm^{-2}s^{-1}}$.
 
-\> The \em{medium-$\be^*$} scenario is based on an universal optics with $\be^* = 90\un{m}$. It combines the properties of high and low $\be^*$ scenarios allowing for measurements of the total cross-section, medium-$|t|$ elastic scattering and all diffractive processes. In the $220\un{m}$ stations the horizontal effective length $L_x$ is rather small, below $2.9\un{m}$, while in the vertical direction $L_y$ goes up to $260\un{m}$, which is similar to the high-$\be^*$ optics. Moreover, $L_x$ practically vanishes in the far units, which simplifies the distinction between elastic and inelastic protons (the horizontal elongation can only come from proton's momentum loss, cf.~\Eq{ttm lin par}). The standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ was planned to be used (nowadays the \abb{LHC} reaches emittance values as low as $2\un{\mu m\ rad}$), leading to a beam divergence of about $2.4\un{\mu rad}$. The expected beam sizes at the $220\un{m}$ stations are $\si_x = 0.4\un{mm}$ and $\si_y = 0.6\un{mm}$. In other words, the pots will have to stay much further from the beam center than in the case of the high-$\be^*$ optics. Consequently, the elastic acceptance (blue histogram in \Fg{ttm elastic acceptance}) starts at much higher $|t|$ -- it reaches $30\percent$ only at $4\cdot 10^{-2}\un{GeV^2}$. This scenario counts on a luminosity of ${\cal L} \ls 10^{28} \un{cm^{-2}s^{-1}}$.
+\> The \em{medium-$\be^*$} scenario is based on an universal optics with $\be^* = 90\un{m}$. It combines the properties of high and low $\be^*$ scenarios allowing for measurements of the total cross section, medium-$|t|$ elastic scattering and all diffractive processes. In the $220\un{m}$ stations the horizontal effective length $L_x$ is rather small, below $2.9\un{m}$, while in the vertical direction $L_y$ goes up to $260\un{m}$, which is similar to the high-$\be^*$ optics. Moreover, $L_x$ practically vanishes in the far units, which simplifies the distinction between elastic and inelastic protons (the horizontal elongation can only come from proton's momentum loss, cf.~\Eq{ttm lin par}). The standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ was planned to be used (nowadays the \abb{LHC} reaches emittance values as low as $2\un{\mu m\ rad}$), leading to a beam divergence of about $2.4\un{\mu rad}$. The expected beam sizes at the $220\un{m}$ stations are $\si_x = 0.4\un{mm}$ and $\si_y = 0.6\un{mm}$. In other words, the pots will have to stay much further from the beam center than in the case of the high-$\be^*$ optics. Consequently, the elastic acceptance (blue histogram in \Fg{ttm elastic acceptance}) starts at much higher $|t|$ -- it reaches $30\percent$ only at $4\cdot 10^{-2}\un{GeV^2}$. This scenario counts on a luminosity of ${\cal L} \ls 10^{28} \un{cm^{-2}s^{-1}}$.
 
 \> The \em{low-$\be^*$} scenarios ($\be^*$ between $0.5$ and $3.5\un{m}$) were designed for diffractive studies and large-$|t|$ elastic scattering measurements. They are optimized for high luminosities ${\cal L} \approx 10^{32} \hbox{ -- } 10^{33}\un{cm^{-2}s^{-1}}$ and not for forward proton detection -- the effective lengths at $220\un{m}$ stations do not exceed $L_x = 2\un{m}$ and $L_y = 20\un{m}$. With the standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ the beam divergence is rather large: $\si_{\th^*} \approx 16\un{\mu rad}$. The beam sizes at the $220\un{m}$ are about $\si_x = 0.1\un{mm}$ and $\si_y = 0.3\un{mm}$. The elastic acceptance (green histogram in \Fg{ttm elastic acceptance}) reaches $30\percent$ at $|t_{30}| = 2.5\un{GeV^2}$.
 
@@ -213,11 +213,11 @@ The rich physics programme of \abb{TOTEM} requires several running scenarios, in
 
 
 
-\section[ttm tcs]{The total cross-section}
+\section[ttm tcs]{The total cross section}
 
-One of the main items on the physics programme of \abb{TOTEM} is the measurement of the total cross-section. This implicitly means the total cross-section due to the strong (hadronic) interaction only. If the electromagnetic interaction were included, the total cross-section would be infinite (consequence of the long range of the electromagnetic force).
+One of the main items on the physics programme of \abb{TOTEM} is the measurement of the total cross section. This implicitly means the total cross section due to the strong (hadronic) interaction only. If the electromagnetic interaction were included, the total cross section would be infinite (consequence of the long range of the electromagnetic force).
 
-\abb{TOTEM} plans to use the luminosity-independent method. This method avoids using any luminosity measurement, which is usually subject to a large uncertainty. Instead, the method exploits the optical theorem. If one takes its ``spin-less'' approximation \Eq{el spinless si} and combines it with the definition of luminosity $N = {\cal L} \si$ (relating an event rate $N$ to the corresponding cross-section $\si$) and with the decomposition of the total cross-section to the elastic and inelastic part $\si_{\rm tot} = \si_{\rm el} + \si_{\rm inel}$, one obtains:
+\abb{TOTEM} plans to use the luminosity-independent method. This method avoids using any luminosity measurement, which is usually subject to a large uncertainty. Instead, the method exploits the optical theorem. If one takes its ``spin-less'' approximation \Eq{el spinless si} and combines it with the definition of luminosity $N = {\cal L} \si$ (relating an event rate $N$ to the corresponding cross section $\si$) and with the decomposition of the total cross section to the elastic and inelastic part $\si_{\rm tot} = \si_{\rm el} + \si_{\rm inel}$, one obtains:
 \eqref{
 	\si_{\rm tot} = {1\over 1+\rh^2} {\d N_{\rm el}/\d t|_{t=0}\over N_{\rm el} + N_{\rm inel}}
 	\ ,\qquad
@@ -227,40 +227,40 @@ Here, $\rh = \Re F(0) / \Im F(0)$ (cf.~\Eq{el rh}), i.e.~it gives the ratio of t
 
 The approximation \Eq{el spinless si} is rather an expectation than a rigorously proved statement, thus some skepticism is due. A.~Martin questioned the negligibility of the spin effects in \bref{martin85}. He compared the $\si_{\rm tot}$ measurements from the ISR and $\rm SP\bar PS$, where several methods (including the luminosity-independent one) had been used. In both cases, he found all methods to give compatible results. However, the large luminosity uncertainty at the $\rm SP\bar PS$ still allows for non-negligible spin effects. It is thus difficult to draw any conclusion, especially in the view of extrapolating it to the \abb{LHC} energies. Therefore it will be important to use several $\si_{\rm tot}$-determination methods and compare the results also at the \abb{LHC}.
 
-Coming back to the luminosity-independent method, \Eq{ttm li meth}, one can identify four inputs: $\d N_{\rm el}/\d t|_{t=0}$, $N_{\rm el}$, $N_{\rm inel}$ and $\rh$. The inelastic rate $N_{\rm inel}$ will be measured with the telescopes \abb{T1} and \abb{T2}, for details see Sec.~6.3 in \bref{totem08}. The value of $\rh$ may be determined by analyzing the elastic differential cross-section in the Coulomb-interference region (if acceptance permits), or it can be taken from an external source (such as the COMPETE fits \bref{cudell02}). Since the expected value of $\rh$ is about $0.14$ and since it enters the $\si_{\rm tot}$ expression as $1 + \rh^2$, the influence of any $\rh$ errors is small.
+Coming back to the luminosity-independent method, \Eq{ttm li meth}, one can identify four inputs: $\d N_{\rm el}/\d t|_{t=0}$, $N_{\rm el}$, $N_{\rm inel}$ and $\rh$. The inelastic rate $N_{\rm inel}$ will be measured with the telescopes \abb{T1} and \abb{T2}, for details see Sec.~6.3 in \bref{totem08}. The value of $\rh$ may be determined by analyzing the elastic differential cross section in the Coulomb-interference region (if acceptance permits), or it can be taken from an external source (such as the COMPETE fits \bref{cudell02}). Since the expected value of $\rh$ is about $0.14$ and since it enters the $\si_{\rm tot}$ expression as $1 + \rh^2$, the influence of any $\rh$ errors is small.
 
 The differential elastic rate $\d N_{\rm el}/\d t$ at $t=0\un{GeV^2}$ can not be measured directly, it can only be extrapolated from the measured low-$|t|$ data. As discussed in \Sc{rp measurement}, there are two optics that extend to sufficiently low $|t|$ values: $\be^* = 1535$ and $90\un{m}$ (see the acceptance curves in \Fg{ttm elastic acceptance}). This extrapolation procedure is important also for the integral elastic rate $N_{\rm el}$ measurement as it allows to correct for the events missed due to the finite acceptance.
 
 In the rest of this section, we will discuss the extrapolation techniques and show the results for the nominal $\be^* = 1535$ and $90\un{m}$ optics at $\sqrt s = 14\un{TeV}$.
 
-Looking at the low-$|t|$ elastic cross-section predictions in \Fg{el mod dsdt narrow}, one can see an ``almost'' exponential decrease. This observation can be better quantified by plotting the exponential slope \Eq{el B}, see \Fg{ext B}. The slope is not strictly constant, but for most models (except the one of Islam et al.) its variation is not large up to $|t| \approx 0.25\un{GeV^2}$. Moreover, the shape of the curves suggests that they can be well approximated by a polynomial of a low degree (such as a parabola). Thus the modulus of the hadronic amplitude can be parameterized as:
+Looking at the low-$|t|$ elastic cross section predictions in \Fg{el mod dsdt narrow}, one can see an ``almost'' exponential decrease. This observation can be better quantified by plotting the exponential slope \Eq{el B}, see \Fg{ext B}. The slope is not strictly constant, but for most models (except the one of Islam et al.) its variation is not large up to $|t| \approx 0.25\un{GeV^2}$. Moreover, the shape of the curves suggests that they can be well approximated by a polynomial of a low degree (such as a parabola). Thus the modulus of the hadronic amplitude can be parameterized as:
 \eqref{|\FH(t)| = \e^{M(t)}\ ,\qquad M(t) \hbox{ a polynomial.}}{ext M par}
 
 \fig{fig/pdf/ext_B.pdf}{ext B}{The exponential slope as predicted by the models discussed in \Sc{el models}. The vertical dashed lines mark the acceptance limits ($|t_{30}|$ values) for each of the considered optics (see \Sc{rp measurement}).}
 
 \bmfig
-\fig{fig/pdf/ext_C.pdf}{ext C}{[7.2cm]The relative difference between cross-sections with and without the Coulomb interaction (included according to the \KL{} formula \Eq{el phase CKL}). The dashed lines mark the acceptance limits $t_{30}$.}
-\fig{fig/pdf/ext_smearing.pdf}{ext smearing}{[7cm]The relative difference between cross-sections after and before the resolution smearing. The expected angular resolutions are shown in \Fg{elr 1535 dth} ($1535\un{m}$ optics) and \Fg{elr 90 dth} ($90\un{m}$ optics).}
+\fig{fig/pdf/ext_C.pdf}{ext C}{[7.2cm]The relative difference between cross sections with and without the Coulomb interaction (included according to the \KL{} formula \Eq{el phase CKL}). The dashed lines mark the acceptance limits $t_{30}$.}
+\fig{fig/pdf/ext_smearing.pdf}{ext smearing}{[7cm]The relative difference between cross sections after and before the resolution smearing. The expected angular resolutions are shown in \Fg{elr 1535 dth} ($1535\un{m}$ optics) and \Fg{elr 90 dth} ($90\un{m}$ optics).}
 \emfig
 
-The parameterization \Eq{ext M par} is related to the hadronic amplitude $\FH$. However, the measured $t$-distribution relates to the cross-section due to both hadronic and Coulomb interactions: $\d\si^{\rm C+H}/\d t$ (see \Sc{el coulomb}). Moreover the experimental $t$-distribution is affected by the limited acceptance and detector resolution. These two effects need to be taken into account in the extrapolation procedure. Looking at the \Fg{ext C}, one may conclude that while the effect of the Coulomb interaction is important for the $1535\un{m}$ optics, it is practically negligible for the $90\un{m}$ optics (staying below $|t| \approx 0.25\un{GeV^2}$). It is the other way round for the smearing effects -- negligible for the $1535\un{m}$ and relevant for the $90\un{m}$ optics, see \Fg{ext smearing}.
+The parameterization \Eq{ext M par} is related to the hadronic amplitude $\FH$. However, the measured $t$-distribution relates to the cross section due to both hadronic and Coulomb interactions: $\d\si^{\rm C+H}/\d t$ (see \Sc{el coulomb}). Moreover the experimental $t$-distribution is affected by the limited acceptance and detector resolution. These two effects need to be taken into account in the extrapolation procedure. Looking at the \Fg{ext C}, one may conclude that while the effect of the Coulomb interaction is important for the $1535\un{m}$ optics, it is practically negligible for the $90\un{m}$ optics (staying below $|t| \approx 0.25\un{GeV^2}$). It is the other way round for the smearing effects -- negligible for the $1535\un{m}$ and relevant for the $90\un{m}$ optics, see \Fg{ext smearing}.
 
 \def\OutlineLabel{Extrapolation for beta* = 1535 m optics}
 \def\TOCLabel{Extrapolation for $\be^* = 1535$ m optics}
 \subsection{Extrapolation for $\be^* = 1535\un{m}$ optics}
 
-Since the Coulomb-interaction effects are relevant for this optics and since these effects act on the level of amplitude (not cross-section, see \Sc{el coulomb}), we need to extend the parameterization \Eq{ext M par} to include also a phase component. \Fg{el mod phase} suggests that, for $|t| \ls 0.25\un{GeV^2}$, a polynomial parameterization is adequate again. Thus, the hadronic amplitude can be parameterized as:
+Since the Coulomb-interaction effects are relevant for this optics and since these effects act on the level of amplitude (not cross section, see \Sc{el coulomb}), we need to extend the parameterization \Eq{ext M par} to include also a phase component. \Fg{el mod phase} suggests that, for $|t| \ls 0.25\un{GeV^2}$, a polynomial parameterization is adequate again. Thus, the hadronic amplitude can be parameterized as:
 \eqref{\FH(t) = \e^{M(t)} \e^{\i P(t)}\ ,\qquad M(t), P(t) \hbox{ polynomials.}}{ext MP par}
 
 In the rest of this section we will present the main results of an old extrapolation study, made even before the \abb{TOTEM} offline software (see \Sc{sr}) existed. That is why we used only a simplified \abb{MC} simulation -- comparable with the fast simulation presented in \Sc{fast simu}, including a simulation of the beam smearing effects similar to \Sc{beam smearing}. The size of the \abb{MC} sample was chosen to correspond to about a day of data-taking with a realistic luminosity (see \Sc{rp measurement}).
 
-The fitting procedure was based on the parameterization \Eq{ext MP par}. In principle this should be inserted into the Coulomb-interference formulae \Eq{el F CH decomp H lin ff,el phase CKL} and cross-section definition \Eq{el spinless si} in order to obtain a full fitting model. However, pursuing this approach would be too time consuming, mainly due to the numerical integrations in \Eq{el phase CKL}. Instead, we tried to separate the Coulomb effects in several iterations. At the beginning we fitted the cross-section data directly with the parameterization \Eq{ext MP par} (thus entirely neglecting the Coulomb interaction). With the results, we evaluated the Coulomb effects via \Eq{el F CH decomp H lin ff,el phase CKL}. These effects were consequently subtracted from the input cross-section data, thus effectively extracting the purely-hadronic cross-section. The subtracted data were then used as the starting point of the second iteration.
+The fitting procedure was based on the parameterization \Eq{ext MP par}. In principle this should be inserted into the Coulomb-interference formulae \Eq{el F CH decomp H lin ff,el phase CKL} and cross section definition \Eq{el spinless si} in order to obtain a full fitting model. However, pursuing this approach would be too time consuming, mainly due to the numerical integrations in \Eq{el phase CKL}. Instead, we tried to separate the Coulomb effects in several iterations. At the beginning we fitted the cross section data directly with the parameterization \Eq{ext MP par} (thus entirely neglecting the Coulomb interaction). With the results, we evaluated the Coulomb effects via \Eq{el F CH decomp H lin ff,el phase CKL}. These effects were consequently subtracted from the input cross section data, thus effectively extracting the purely-hadronic cross section. The subtracted data were then used as the starting point of the second iteration.
 
 % corrections by iterations: data = U0 (U is uncorrected, C is corrected), guess C0 (e.g.~by taking C0 = U0), then iterate: Ci --> Ui --> corr(i) = Ci/Ui --> C(i+1) = U0 * corr(i) and again unless |C(i+1) - C(i)| < threshold
 
-We made a number of fits, trying to find such fit settings that minimize the deviation of the extrapolated cross-section at $t=0\un{GeV^2}$ from its original value. The parameters to optimize included: the lever-arm (the lower $|t|_{\rm low}$ and upper bound $|t|_{\rm up}$ of the fit), the binning of the input data, the degrees of modulus $M(t)$ and phase $P(t)$ polynomials and the number of Coulomb-correction iterations. We aimed at performing this optimization in a ``model independent way'' -- we used five model variants from \Sc{el models} and tried to minimize the mean extrapolated-original deviation.
+We made a number of fits, trying to find such fit settings that minimize the deviation of the extrapolated cross section at $t=0\un{GeV^2}$ from its original value. The parameters to optimize included: the lever-arm (the lower $|t|_{\rm low}$ and upper bound $|t|_{\rm up}$ of the fit), the binning of the input data, the degrees of modulus $M(t)$ and phase $P(t)$ polynomials and the number of Coulomb-correction iterations. We aimed at performing this optimization in a ``model independent way'' -- we used five model variants from \Sc{el models} and tried to minimize the mean extrapolated-original deviation.
 
-\fig{fig/pdf/ext_results_1535.pdf}{ext results 1535}{The extrapolation deviation of the cross-section at $t=0\un{GeV^2}$, as a function of the fit lower bound $|t|_{\rm low}$. The deviation is calculated as (extrapolated - original) / original, where e.g.~original denotes the original (true) value of $\d\si^{\rm H}/\d t|_{0}$.}
+\fig{fig/pdf/ext_results_1535.pdf}{ext results 1535}{The extrapolation deviation of the cross section at $t=0\un{GeV^2}$, as a function of the fit lower bound $|t|_{\rm low}$. The deviation is calculated as (extrapolated - original) / original, where e.g.~original denotes the original (true) value of $\d\si^{\rm H}/\d t|_{0}$.}
 
 \Fg{ext results 1535} shows probably the most interesting result of the study -- the dependence of the extrapolation deviation on the lower bound of the fit. This extrapolation was performed with a cubic modulus polynomial $M(t)$, constant phase polynomial $P(t)$, one Coulomb-correction iteration and the upper bound $|t|_{\rm up} = 0.054\un{GeV^2}$. For most of the models, the deviation lies in a band $\pm 0.2\percent$. The increasing deviation of the model of Islam et al.~might be explained by its exponential slope behavior, see \Fg{ext B}. It is deviating most from a constant value and the polynomial approximation is less accurate than for the other models.
 
@@ -277,14 +277,14 @@ For the $\be^* = 90\un{m}$, the situation is quite different. The acceptance onl
 
 Another difference compared to the $1535\un{m}$ optics is the much more pronounced beam smearing, its effects are quantified in \Fg{ext smearing}. The dominant error contribution is coming from the horizontal scattering angle $\th_x^*$ reconstruction, see \Fg{elr 90 dth}.
 
-In principle, for the extrapolation one may use a very similar method as for the $1535\un{m}$ optics. One would just replace the Coulomb-correction iterations with smearing-correction iterations. However, we tried another approach. An approach that might be used even if $t_x$ could not be measured at all. In such a case, one can only work with a ``vertical'' cross-section $\d\si/\d t_y$. This can be transformed into the full cross-section $\d\si/\d t$ by exploiting the azimuthal symmetry (thus $\d\si/\d t_x = \d\si/\d t_y$) and the relation $t = t_x + t_y$ (see \Eq{ttm t th}):
+In principle, for the extrapolation one may use a very similar method as for the $1535\un{m}$ optics. One would just replace the Coulomb-correction iterations with smearing-correction iterations. However, we tried another approach. An approach that might be used even if $t_x$ could not be measured at all. In such a case, one can only work with a ``vertical'' cross section $\d\si/\d t_y$. This can be transformed into the full cross section $\d\si/\d t$ by exploiting the azimuthal symmetry (thus $\d\si/\d t_x = \d\si/\d t_y$) and the relation $t = t_x + t_y$ (see \Eq{ttm t th}):
 \eqref{{\d\si\over\d t}(t) \propto \int\limits_t^0 \d u\, {\d\si\over\d t_y}(u)\, {\d\si\over\d t_y}(t - u)\ .}{ext dsdty to dsdt}
 However, since low $|t_y|$ information is missing (out of acceptance), an extrapolation step would be needed just for this transformation. It therefore turns out better to transform the $t$-parameterization \Eq{ext M par} in a $t_y$-parameterization and fit it directly through $t_y$ data. The transform follows from the relation between $t$ and $t_y$ \Eq{ttm t x y}. Again, assuming the azimuthal symmetry ($\ph$ is uniformly distributed), one can write
 \eqref{{\d\si\over\d t_y}(t_y) = {2\over\pi} \int\limits_{0}^{\pi/2} {\d\ph\over\sin^2\ph}\ \ {\d\si\over\d t}\!\left(t_y\over\sin^2\ph\right)\ .}{ext dsdt dsdty}
 This transform can now by applied to the parameterization \Eq{ext M par}. Moreover, considering that the quadratic and higher terms of the polynomial $M(t)$ do not carry essential contributions (see \Fg{ext B}), one can approximate:
 \eqref{{\d\si\over\d t} = e^{a\, +\, bt\, +\, ct^2\, +\, \ldots} \quad\Rightarrow\quad {\d\si\over\d t_y}(t_y) \approx {1\over\sqrt{\pi}}\, {e^{a\, +\, bt_y\, +\, ct_y^2\, +\, \ldots}\over\sqrt{|b\,t_y|}}\ .}{ext dsdt dsdty app}
 
-To test this extrapolation approach, we used the same (simplified) \abb{MC} simulation as for the $1535\un{m}$ optics. The main results are shown in \Fg{ext results 90}. We fitted the $t_y$ distribution with the parameterization \Eq{ext dsdt dsdty app} to extract the $a$ parameter, which determines the cross-section at $t=0\un{GeV^2}$. The fits were carried out on the intervals from $|t_y|_{\rm low}$ (horizontal axis) to $|t_y|_{\rm up} = 0.25\un{GeV^2}$. No attempt was made to correct for the smearing effects, which results in the overall offset $-2\percent$. But there is no principal problem to include such a correction in future. Most models fall in a band $\pm 1\percent$ around the offset $-2\percent$. The model of Islam et al.~deviates slightly more. Looking back to \Fg{ext B} one can see the exponential slope $B(t)$ being more curved for the model of Islam than for the others. Therefore the approximation \Eq{ext dsdt dsdty app} is less accurate for this model.
+To test this extrapolation approach, we used the same (simplified) \abb{MC} simulation as for the $1535\un{m}$ optics. The main results are shown in \Fg{ext results 90}. We fitted the $t_y$ distribution with the parameterization \Eq{ext dsdt dsdty app} to extract the $a$ parameter, which determines the cross section at $t=0\un{GeV^2}$. The fits were carried out on the intervals from $|t_y|_{\rm low}$ (horizontal axis) to $|t_y|_{\rm up} = 0.25\un{GeV^2}$. No attempt was made to correct for the smearing effects, which results in the overall offset $-2\percent$. But there is no principal problem to include such a correction in future. Most models fall in a band $\pm 1\percent$ around the offset $-2\percent$. The model of Islam et al.~deviates slightly more. Looking back to \Fg{ext B} one can see the exponential slope $B(t)$ being more curved for the model of Islam than for the others. Therefore the approximation \Eq{ext dsdt dsdty app} is less accurate for this model.
 
 \fig{fig/pdf/ext_results_90.pdf}{ext results 90}{The extrapolation deviation as a function of the fit lower bound $|t_y|_{\rm low}$. The deviation is calculated as (extrapolated - original) / original, where e.g.~original denotes the original (true) value of $\d\si^{\rm H}/\d t|_{0}$.}
 
